WonderEvents 26.09.0
Bump the plugin to 26.09.0 and target Java 8, while updating config keys for FastStats and auto-updater settings with a configurable delay. This also adds structured addon/expansion logging, improves manifest/version checks, refreshes bundled expansion assets, and replaces newer Java syntax/features with Java 8-compatible alternatives.